<resources>
    <string name="Toast1">Please Select A Car To Book A Test Drive</string>
    <string name="Toast2">No Cars Available To Display</string>
    <string name="Toast3">Failed To Load Cars</string>
    <string name="Toast4">Error Fetching Cars:</string>
    <string name="Toast5">No Models Found For The Selected Make</string>
    <string name="Toast6">Car(s) Found: </string>
    <string name="Toast7">No Cars Found With The Given Filters</string>
    <string name="Toast8">Failed To Retrieve Data From API</string>
    <string name="Toast9">Search Failed: </string>
    <string name="Toast10">Car ID Not Available</string>
    <string name="Toast11">Please Select A Booking Date And Time!</string>
    <string name="Toast12">User Email Not Available!</string>
    <string name="Toast13">Booking Created Successfully!</string>
    <string name="Toast14">Failed To Create Booking</string>
    <string name="Toast15">Error Creating Booking: </string>
    <string name="Toast16">User Is Not Logged In!</string>
    <string name="Toast17">WhatsApp Is Not Installed On Your Device</string>
    <string name="Toast18">Error: Unable To Open WhatsApp</string>
    <string name="Toast19">Use Your Biometrics To Login</string>
    <string name="Toast20">Enable Biometrics In Settings For Easy Login</string>
    <string name="Toast21">Login Error, Please Log In Again</string>
    <string name="Toast22">Failed To Load Settings Data</string>
    <string name="Toast23">User Not Logged In, Please Log In</string>
    <string name="Toast24">Google Sign-In Canceled</string>
    <string name="Toast25">Google Sign-In Failed:</string>
    <string name="Toast26">Google Sign-In Successful</string>
    <string name="Toast27">Firebase Authentication Failed: </string>
    <string name="Toast28">Registration Successful!</string>
    <string name="Toast29">Authentication Failed: </string>
    <string name="Toast30">Passwords Do Not Match. Please Try Again.</string>
    <string name="Toast31">Please Fill In All Fields</string>
    <string name="Toast32">Login Successful</string>
    <string name="Toast33">Authentication Failed: </string>
    <string name="Toast34">Fill In The Required Fields</string>
    <string name="Toast35">Authentication Error</string>
    <string name="Toast36">Authentication Successful, Welcome</string>
    <string name="Toast37">Biometric Authentication</string>
    <string name="Toast38">Login Using Your Biometric Credential</string>
    <string name="Toast39">Cancel</string>
    <string name="Toast40">Please Select A Car From Buy Page To Make A Booking</string>
    <string name="Toast41">Main Image Selected</string>
    <string name="Toast42">Car Make</string>
    <string name="Toast43">Car Model</string>
    <string name="Toast44">Please Select A Car Make</string>
    <string name="Toast45">Please Select A Car Model</string>
    <string name="Toast46">Please Select A Year</string>
    <string name="Toast47">Please Select A Transmission</string>
    <string name="Toast48">Please Select A Fuel Type</string>
    <string name="Toast49">Please Select A Body Type</string>
    <string name="Toast50">Please Select A Condition</string>
    <string name="Toast51">Please Select A Dealership</string>
    <string name="Toast52">Please Select Images</string>
    <string name="Toast53">Failed To Upload Main Image</string>
    <string name="Toast54">Car Listed Successfully</string>
    <string name="Toast55">Failed To List Car</string>
    <string name="Toast56">Error: </string>
    <string name="Toast57">Failed To Upload Images</string>
    <string name="Toast58">Error Clearing Form</string>
    <string name="Toast59">Year</string>
    <string name="Toast60">Transmission</string>
    <string name="Toast61">Fuel Type</string>
    <string name="Toast62">Body Type</string>
    <string name="Toast63">Condition</string>
    <string name="Toast64">Dealership</string>
    <string name="Toast65">Settings Data Successfully Loaded</string>
    <string name="Toast66">No Data For User, Attempting To Creating Default Settings: </string>
    <string name="Toast67">Default Settings Created For: </string>
    <string name="Toast68">Failed To Create Default Settings For: </string>
    <string name="Toast69">Failed To Load Settings Data</string>
    <string name="Toast70">Biometric Authentication Not Supported</string>
    <string name="Toast71">Biometric Hardware Is Currently Unavailable</string>
    <string name="Toast72">Biometrics Not Set, Please Set In Phone Settings</string>
    <string name="Toast73">Unexpected Error Occurred. Please Try Again.</string>
    <string name="Toast74">No Language Settings Found</string>
    <string name="Toast75">Feature Currently Unavailable, Coming Soon!</string>
    <string name="Toast76">Biometrics Enabled Successfully</string>
    <string name="Toast77">Failed To Update Biometric Setting.</string>
    <string name="Toast78">Failed To Load User Settings</string>
    <string name="Toast79">No User Logged In</string>
    <string name="Toast80">Biometrics Disabled Successfully</string>
    <string name="theme_dark">Dark Mode</string>
    <string name="theme_light">Light Mode</string>
    <string name="Toast_theme_updated">Theme updated successfully</string>
    <string name="Toast_theme_update_failed">Failed to update theme</string>
    <string name="Toast81">Language Set To ENG</string>
    <string name="Toast82">Failed To Update Language Setting</string>
    <string name="Toast83">Language Set To AFR</string>
    <string name="Toast84">Select Make</string>
    <string name="Toast85">Select Model</string>
    <string name="Toast86">No Favourites</string>
    <string name="Toast87">Maximum Favourites Reached</string>
    <string name="Toast88">Your Number Of Favourites (Max 5): </string>
    <string name="Toast89">No Car ID Found</string>
    <string name="Toast90">Car Added To Favourites Successfully</string>
    <string name="Toast91">Error Adding Car To Favourites</string>
    <string name="Toast92">Failed To Load Favourites</string>
    <string name="Toast93">No Favourites Found</string>
    <string name="fav_search">Favourites</string>
    <string name="price_compare">Compare Prices</string>
    <string name="Toast94">Your Favourite Vehicles</string>
    <string name="Toast95">Price Comparison Applied</string>
    <string name="Toast96">No Prices To Compare</string>
    <string name="Toast97">No Push Notifications Settings Found</string>
    <string name="Toast98">Push Notifications Enabled Successfully</string>
    <string name="Toast100">Push Notifications Disabled Successfully</string>
    <string name="Toast99">Error Enabling Push Notifications</string>
    <string name="Toast101">Notification permission granted</string>
    <string name="Toast102">Notification permission denied</string>
    <string name="app_name">Legit Auto Cars</string>
    <string name="login">Sign in</string>
    <string name="log_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">signup</string>
    <string name="auto_legit_cars">Auto Legit Cars</string>
    <string name="email_or_user_name">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">Sign up with</string>
    <string name="sign_in_to_enjoy_the_best_car_experience">Sign in to enjoy the best car experience</string>
    <string name="go_ahead_and_set_up_your_account">Go ahead and set up your account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="this_is_a_custom_toast">This is a custom toast</string>
    <string name="or_login_with">Sign in with</string>
    <string name="google">Google</string>
    <string name="google_image">google_image</string>
    <string name="favourites">Add Car To Favourites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="footer_logo">Footer Logo</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="logged_in_email">Logged in Email</string>
    <string name="logo">logo</string>
    <string name="search_make_model_and_varient">Search make, model and varient</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max price</string>
    <string name="price">Price</string>
    <string name="search">search</string>
    <string name="reset">Reset</string>
    <string name="result">Results</string>
    <string name="search_make_model_and_variant">Search by make, model, or variant</string>
    <string name="application_name" translatable="false">LegitAutoCars_ST10088734</string>
    <string name="biometrics">Biometrics</string>
    <string name="theme">Theme</string>
    <string name="language_english">Language</string>
    <string name="language_afrikaans">Afrikaans</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="selection_on">ON</string>
    <string name="selection_off">OFF</string>
    <string name="english">ENG</string>
    <string name="afrikaans">AFR</string>
    <string name="select_make">Select Car Make</string>
    <string name="sell_subheading">Fill In The Following About Your Car:</string>
    <string name="hint_model">Car Model</string>
    <string name="hint_make">Car Make</string>
    <string name="hint_year">Year Model</string>
    <string name="hint_mileage">Mileage</string>
    <string name="hint_description">Tell Us More About Your Car</string>
    <string name="sell">Sell</string>
    <string name="by_continuing_i_understand_and_agree_with_the_legit_auto_parts_terms_amp_conditions_and_privacy_policy"><![CDATA[By continuing I understand and agree with the Legit auto parts Terms & conditions and privacy policy.]]></string>
    <string name="enter_details_of_the_car_you_want_to_sell">Enter details of the car you would like to sell</string>
    <string name="dealership">Dealership</string>
    <string name="special_edition">Special edition</string>
    <string name="selling_price">Selling Price</string>
    <string name="upload_main_image">Upload Main Image</string>
    <string name="select_multiple_images">Select multiple images</string>
    <string name="capture_image">Capture Image</string>
    <string name="main_image">Main Image</string>
    <string name="pick_selling_images">Pick Images</string>
    <string name="once_you_have_selected_your_images_click_on_the_one_you_want_as_your_main_selling_image">Once you have selected your images, click on the one you want as your main selling image</string>
    <string name="car_selected">Car Selected</string>
    <string name="select_test_date_time">Select Test Date &amp; Time</string>
    <string name="click_above">click_above</string>
    <string name="submit_booking">Submit Booking</string>
    <string name="whatapp_us">whatApp_Us</string>
    <string name="settings">Settings</string>
    <string name="booking">Book Test Drive</string>
    <string name="book_test_drive">Book test drive</string>
    <string name="or_contact_us_by">Or Contact us on</string>
    <string name="placeholder">Placeholder</string>
    <string name="model">Model</string>
    <string name="status">Status</string>
    <string name="mileage">Mileage</string>
    <string name="transmission">Transmission</string>
    <string name="location">Location</string>
</resources>