<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Settings"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/DarkMode"
            android:orientation="vertical">

            <!-- Top section with icon and title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="2dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:shapeAppearance="@style/circular"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/dm_settings_icon_100"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/settings"
                    android:textColor="@color/White"
                    android:textSize="35sp" />
            </LinearLayout>

            <!-- Settings options -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">

                <!-- Email setting -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/settings_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@string/logged_in_email"
                        android:gravity="center"
                        android:textColor="@color/Yellow"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Biometrics setting -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/biometric_selection"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="28dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@string/biometrics"
                        android:textColor="@color/White"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/biometrics_enabled"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/Red"
                        android:text="@string/selection_off"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Theme setting -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/theme"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="28dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@string/theme"
                        android:textColor="@color/White"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/theme_selection"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/Red"
                        android:text="@string/theme_dark"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Language setting -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/langauge"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="28dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@string/language_english"
                        android:textColor="@color/White"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/language_selection"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/Red"
                        android:text="@string/english"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Push notifications setting -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/push_notifications"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="28dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@string/push_notifications"
                        android:textColor="@color/White"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/push_notifications_selection"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/Red"
                        android:text="@string/selection_off"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!-- Logo at the bottom -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="-20dp">

                <ImageView
                    android:id="@+id/settings_logo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_sell_page" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>
